Fixed babbel article and font spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -49,7 +49,7 @@ h1, h2, h3, h4 {
 img {
     max-width: 100%;
     vertical-align: middle;
-    user-drag: none; 
+    user-drag: none;
     -moz-user-select: none;
     -webkit-user-drag: none;
 }
@@ -225,6 +225,10 @@ h1, h2, h3, h4, h5, h6 {
 
 article {
     p {
+      font-size: $paragraph-font-size;
+      line-height: 1.58;
+      letter-spacing: -.001em;
+      font-weight: 400;
         img {
             display: block;
             margin: 0 auto;
