--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@
 // Our variables
 $base-font-family: 		'Source Sans Pro', sans-serif;
 $heading-font-family: 	'Avenir Next', sans-serif;
+$paragraph-font-size: 20px;
 $base-font-size:   16px;
 $bigger-font-size:   19px;
 $base-font-weight: 400;
@@ -28,6 +29,7 @@ $white:				#fff;
 $not-so-white:		#eee;
 $black:				#1b1b1b;
 $text-color:       $not-so-white;
+$paragraph-font-color: rgba(0,0,0,0.8);
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
